still contrast issues

--- a/styles/place.css
+++ b/styles/place.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #B22222; 
+    --primary-color: #750101; 
     --background-color: #ffffff; 
     --text-color: #212121; 
     --font-family-main: 'Montserrat', sans-serif;
